src/main/default/objects/Extentia_SIM__MP_AddressInfo__c/Extentia_SIM__MP_AddressInfo__c.object-meta.xml
<CustomObject>
    <label>MP_AddressInfo</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>MP_AddressInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MP_AddressInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>