src/main/default/objects/Extentia_SIM__MP_AddressInfo__c/fields/Extentia_SIM__CityName__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__CityName__c</fullName>
    <label>CityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>