src/main/default/objects/Extentia_SIM__MP_AddressInfo__c/fields/Extentia_SIM__CombinationKey__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__CombinationKey__c</fullName>
    <label>CombinationKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>