src/main/default/objects/Extentia_SIM__MP_AddressInfo__c/fields/Extentia_SIM__CountryName__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__CountryName__c</fullName>
    <label>CountryName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>