src/main/default/objects/Extentia_SIM__MP_AddressInfo__c/fields/Extentia_SIM__StateName__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__StateName__c</fullName>
    <label>StateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>