src/main/default/objects/Extentia_SIM__MP_AddressInfo__c/listViews/Extentia_SIM__All.listView-meta.xml
<ListView>
    <fullName>Extentia_SIM__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>